--- a/package.json
+++ b/package.json
@@ -1,19 +1,38 @@
 {
-  "name": "nftproject",
+  "name": "metamask-simple-dapp",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Building a simple dapp used in MetaMask e2e tests.",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "deploy": "./deploy.sh",
+    "lint": "eslint . --ext js,json",
+    "lint:fix": "eslint . --fix --ext js,json",
+    "serve": "static-server . --port 9011",
+    "test": "yarn lint"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ziesorx/nftProject.git"
+    "url": ""
   },
-  "author": "",
-  "license": "ISC",
+  "files": [
+    "/contract.js",
+    "/meta.html"
+  ],
+  "author": "MetaMask",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ziesorx/nftProject/issues"
+    "url": ""
   },
-  "homepage": "https://github.com/ziesorx/nftProject#readme"
+  "homepage": "",
+  "dependencies": {
+    "@metamask/onboarding": "^1.0.1",
+    "opensea-js": "^2.0.0",
+    "web3": "^1.7.0"
+  },
+  "devDependencies": {
+    "@metamask/eslint-config": "^2.0.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-json": "^2.0.1",
+    "static-server": "^2.2.1"
+  }
 }
